--- a/index.html
+++ b/index.html
@@ -2,11 +2,16 @@
 <html>
 
 <head>
-  <title></title>
-  <meta charset="utf-8">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width">
+    <meta name="description" content="Affordable and professional web design">
+    <meta name="keywords" content="web design, affordable web design, professional web design">
+    <meta name="author" content="Yildiray Koyuncu">
+    <title>Acme Web Deisgn | Welcome</title>
+    <link rel="stylesheet" href="./css/styles.css">
 
-  <!-- Leave this here!  It renders the review buttons  -->
-  <script src='./evaluation/init.js'></script>
+    <!-- Leave this here!  It renders the review buttons  -->
+    <script src='./evaluation/init.js'></script>
 </head>
 
 <body>
