--- a/index.html
+++ b/index.html
@@ -15,6 +15,15 @@
 </head>
 
 <body>
+
+    <header>
+        <div class="container">
+            <div id="branding">
+                <h1>Acme Web Design</h1>
+            </div>
+        </div>
+    </header>
+
 </body>
 
 </html>
