--- a/index.html
+++ b/index.html
@@ -21,6 +21,19 @@
             <div id="branding">
                 <h1>Acme Web Design</h1>
             </div>
+            <nav>
+                <ul>
+                    <li>
+                        <a href="index.html">Home</a>
+                    </li>
+                    <li>
+                        <a href="about.html">About</a>
+                    </li>
+                    <li>
+                        <a href="services.html">Services</a>
+                    </li>
+                </ul>
+            </nav>
         </div>
     </header>
 
