Added section element and container div

--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
             </nav>
         </div>
     </header>
+    <div id="showcase">
+        <div class="container"></div>
+    </div>
 
 </body>
 
