--- a/index.html
+++ b/index.html
@@ -38,7 +38,10 @@
         </div>
     </header>
     <div id="showcase">
-        <div class="container"></div>
+        <div class="container">
+            <h1>Affordable Professional Web Design</h1>
+            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu luctus ipsum, rhoncus semper magna. Nulla nec magna sit amet sem interdum condimentum.</p>
+        </div>
     </div>
 
 </body>
