--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="web design, affordable web design, professional web design">
     <meta name="author" content="Yildiray Koyuncu">
     <title>Acme Web Deisgn | Welcome</title>
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/style.css">
 
     <!-- Leave this here!  It renders the review buttons  -->
     <script src='./evaluation/init.js'></script>
