--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="keywords" content="web design, affordable web design, professional web design">
     <meta name="author" content="Yildiray Koyuncu">
     <title>Acme Web Deisgn | Welcome</title>
-    <link rel="stylesheet" href="./css/style.css">
+    <link rel="stylesheet" href="./CSS/style.css">
 
     <!-- Leave this here!  It renders the review buttons  -->
     <script src='./evaluation/init.js'></script>
@@ -37,12 +37,18 @@
             </nav>
         </div>
     </header>
-    <div id="showcase">
+    <section id="showcase">
         <div class="container">
             <h1>Affordable Professional Web Design</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam eu luctus ipsum, rhoncus semper magna. Nulla nec magna sit amet sem interdum condimentum.</p>
         </div>
-    </div>
+    </section>
+    <section id="newsletter">
+        <div class="container">
+
+        </div>
+    </section>
+
 
 </body>
 
