Added CTA and subscription form

--- a/index.html
+++ b/index.html
@@ -45,7 +45,11 @@
     </section>
     <section id="newsletter">
         <div class="container">
-
+            <h1>Subscribe to our newsletter</h1>
+            <form action="#">
+                <input type="email" placeholder="Enter email...">
+                <button type="submit" class="button_1">Subscribe</button>
+            </form>
         </div>
     </section>
 
