--- a/index.html
+++ b/index.html
@@ -52,6 +52,13 @@
             </form>
         </div>
     </section>
+    <section id="boxes">
+        <div class="container">
+            <div class="box"></div>
+            <div class="box"></div>
+            <div class="box"></div>
+        </div>
+    </section>
 
 
 </body>
