--- a/index.html
+++ b/index.html
@@ -54,9 +54,21 @@
     </section>
     <section id="boxes">
         <div class="container">
-            <div class="box"></div>
-            <div class="box"></div>
-            <div class="box"></div>
+            <div class="box">
+                <img src="./img/logo_html.png" alt="">
+                <h3>HTML Markup</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
+            </div>
+            <div class="box">
+                <img src="./img/logo_css.png" alt="">
+                <h3>CSS Styling</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
+            </div>
+            <div class="box">
+                <img src="./img/logo_brush.png" alt="">
+                <h3>Graphic Design</h3>
+                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
+            </div>
         </div>
     </section>
 
