--- a/index.html
+++ b/index.html
@@ -56,12 +56,12 @@
         <div class="container">
             <div class="box">
                 <img src="./img/logo_html.png" alt="">
-                <h3>HTML Markup</h3>
+                <h3>HTML5 Markup</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
             </div>
             <div class="box">
                 <img src="./img/logo_css.png" alt="">
-                <h3>CSS Styling</h3>
+                <h3>CSS3 Styling</h3>
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus mi augue, viverra sit amet ultricies</p>
             </div>
             <div class="box">
