--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             </nav>
         </div>
     </header>
+
     <section id="showcase">
         <div class="container">
             <h1>Affordable Professional Web Design</h1>
@@ -52,6 +53,7 @@
             </form>
         </div>
     </section>
+
     <section id="boxes">
         <div class="container">
             <div class="box">
@@ -71,6 +73,10 @@
             </div>
         </div>
     </section>
+
+    <footer>
+        <p>Acme Web Deisgn, Copyright &copy; 2017</p>
+    </footer>
 
 
 </body>
