Added layout styling for main column and sidebar

--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Affordable and professional web design">
     <meta name="keywords" content="web design, affordable web design, professional web design">
     <meta name="author" content="Yildiray Koyuncu">
-    <title>Acme Web Deisgn | Welcome</title>
+    <title>Acme Web Deisgn | About</title>
     <link rel="stylesheet" href="./CSS/style.css">
 
     <!-- Leave this here!  It renders the review buttons  -->
