--- a/index.html
+++ b/index.html
@@ -25,13 +25,13 @@
             <nav>
                 <ul>
                     <li class="current">
-                        <a href="index.html">Home</a>
+                        <a href="./index.html">Home</a>
                     </li>
                     <li>
-                        <a href="about.html">About</a>
+                        <a href="./about.html">About</a>
                     </li>
                     <li>
-                        <a href="services.html">Services</a>
+                        <a href="./services.html">Services</a>
                     </li>
                 </ul>
             </nav>
